// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots All Components/Blockquote With Citation 1`] = `
<blockquote
  className="sc-bdVaJa gmSXkm"
>
  <q
    className="sc-bwzfXH gqIjTA"
  >
    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
  </q>
  <cite
    className="sc-htpNat eaMNlw"
  >
    Ian Malcolm
  </cite>
</blockquote>
`;

exports[`Storyshots All Components/Blockquote Without Citation 1`] = `
<blockquote
  className="sc-bdVaJa gmSXkm"
>
  <q
    className="sc-bwzfXH gqIjTA"
  >
    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
  </q>
</blockquote>
`;

exports[`Storyshots All Components/Breadcrumbs Normal 1`] = `
<ol
  className="sc-bxivhb cpkjqV"
>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Industry
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Get funding
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    Find a fund to create films, TV or new formats of storytelling
  </li>
</ol>
`;

exports[`Storyshots All Components/Breadcrumbs Wrapping 1`] = `
<ol
  className="sc-bxivhb cpkjqV"
>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Industry
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Get funding
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Find a fund to create films, TV or new formats of storytelling
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    Find a fund to create films, TV or new formats of storytelling
  </li>
</ol>
`;

exports[`Storyshots All Components/Divider Normal 1`] = `
<hr
  className="sc-bZQynM hsboVq"
/>
`;

exports[`Storyshots All Components/Footer Normal 1`] = `
<footer
  className="sc-gzVnrw bRQfCj"
>
  <div
    className="sc-htoDjs hVELrt"
  >
    <section
      className="sc-iwsKbI FYnkY"
    >
      <img
        alt="British Film Institute. Film Forever."
        className="sc-dnqmqq fcmNkl"
        src="test-file-stub"
      />
      <nav
        className="sc-gqjmRU lcYDQW"
      >
        <h4
          className="sc-VigVT jjueOz"
        >
          Business
        </h4>
        <a
          aria-current="page"
          className="sc-fjdhpX iUMHRO"
          href="/"
          onClick={[Function]}
        >
          Partnerships
        </a>
        <a
          aria-current="page"
          className="sc-fjdhpX iUMHRO"
          href="/"
          onClick={[Function]}
        >
          Venue hire
        </a>
        <a
          aria-current="page"
          className="sc-fjdhpX iUMHRO"
          href="/"
          onClick={[Function]}
        >
          Viewing theatre hire
        </a>
        <a
          aria-current="page"
          className="sc-fjdhpX iUMHRO"
          href="/"
          onClick={[Function]}
        >
          Book a film for your cinema
        </a>
      </nav>
      <nav
        className="sc-gqjmRU lcYDQW"
      >
        <h4
          className="sc-VigVT jjueOz"
        >
          About the BFI
        </h4>
        <a
          aria-current="page"
          className="sc-fjdhpX iUMHRO"
          href="/"
          onClick={[Function]}
        >
          Our story
        </a>
        <a
          aria-current="page"
          className="sc-fjdhpX iUMHRO"
          href="/"
          onClick={[Function]}
        >
          Our team
        </a>
        <a
          aria-current="page"
          className="sc-fjdhpX iUMHRO"
          href="/"
          onClick={[Function]}
        >
          Careers
        </a>
        <a
          aria-current="page"
          className="sc-fjdhpX iUMHRO"
          href="/"
          onClick={[Function]}
        >
          Our partners
        </a>
        <a
          aria-current="page"
          className="sc-fjdhpX iUMHRO"
          href="/"
          onClick={[Function]}
        >
          Press releases and media enquiries
        </a>
      </nav>
      <nav
        className="sc-gqjmRU lcYDQW"
      >
        <h4
          className="sc-VigVT jjueOz"
        >
          Keep in touch
        </h4>
        <a
          aria-current="page"
          className="sc-fjdhpX iUMHRO"
          href="/"
          onClick={[Function]}
        >
          Contact us
        </a>
        <a
          className="sc-jzJRlG iXaVhE"
          href="#"
        >
          <img
            alt=""
            className="sc-cSHVUG gZcENC"
            src="test-file-stub"
          />
          Facebook
        </a>
        <a
          className="sc-jzJRlG iXaVhE"
          href="#"
        >
          <img
            alt=""
            className="sc-cSHVUG gZcENC"
            src="test-file-stub"
          />
          Twitter
        </a>
        <a
          className="sc-jzJRlG iXaVhE"
          href="#"
        >
          <img
            alt=""
            className="sc-cSHVUG gZcENC"
            src="test-file-stub"
          />
          YouTube
        </a>
        <a
          className="sc-jzJRlG iXaVhE"
          href="#"
        >
          <img
            alt=""
            className="sc-cSHVUG gZcENC"
            src="test-file-stub"
          />
          Instagram
        </a>
      </nav>
    </section>
    <section
      className="sc-gZMcBi gnVDDW"
    >
      <img
        alt="The BFI recieves National Lottery funding"
        src="test-file-stub"
      />
      <p
        className="sc-jTzLTM eCMmlJ"
      >
        ©2020 British Film Institute. All rights reserved. Registered charity 287780
      </p>
    </section>
  </div>
</footer>
`;

exports[`Storyshots All Components/Header Opaque Background 1`] = `
Array [
  <div
    className="sc-kgoBCf hJlZUq"
  >
    <div
      className="sc-kGXeez cyTksT"
    >
      <ul
        className="sc-kpOJdX cWODpJ"
      >
        <li
          className="sc-dxgOiQ EbLR"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-dxgOiQ EbLR"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-dxgOiQ EbLR"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-jlyJG jfAQre"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-gipzik htYqK"
    >
      <a
        aria-current="page"
        className="sc-csuQGl gGRcVa"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-Rmtcm ewaapn"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-cvbbAY eNxvkE"
      >
        <ul
          className="sc-jWBwVP BZrWt"
        >
          <li
            className="sc-brqgnP RaqGA"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-cMljjf lmniap"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-brqgnP RaqGA"
          >
            <a
              aria-haspopup="true"
              className="sc-cMljjf lcWZwU"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-brqgnP RaqGA"
          >
            <a
              aria-haspopup="true"
              className="sc-cMljjf lcWZwU"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-eHgmQL ggoZon"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-hSdWYo cqYJMH"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kAzzGY ixYvFQ"
      >
        <img
          alt=""
          className="sc-chPdSV kfLyyH"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots All Components/Header Transparent Background 1`] = `
Array [
  <div
    className="sc-kgoBCf hJlZUq"
  >
    <div
      className="sc-kGXeez cyTksT"
    >
      <ul
        className="sc-kpOJdX cWODpJ"
      >
        <li
          className="sc-dxgOiQ EbLR"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-dxgOiQ EbLR"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-dxgOiQ EbLR"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-jlyJG eHehst"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-gipzik htYqK"
    >
      <a
        aria-current="page"
        className="sc-csuQGl gGRcVa"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-Rmtcm ewaapn"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-cvbbAY eNxvkE"
      >
        <ul
          className="sc-jWBwVP BZrWt"
        >
          <li
            className="sc-brqgnP RaqGA"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-cMljjf gebQJH"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-brqgnP RaqGA"
          >
            <a
              aria-haspopup="true"
              className="sc-cMljjf dPhPmR"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-brqgnP RaqGA"
          >
            <a
              aria-haspopup="true"
              className="sc-cMljjf dPhPmR"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-eHgmQL ggoZon"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-hSdWYo cqYJMH"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kAzzGY gozaGK"
      >
        <img
          alt=""
          className="sc-chPdSV kfLyyH"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots All Components/Header With Overflowing Content 1`] = `
Array [
  <div
    className="sc-kgoBCf hJlZUq"
  >
    <div
      className="sc-kGXeez cyTksT"
    >
      <ul
        className="sc-kpOJdX cWODpJ"
      >
        <li
          className="sc-dxgOiQ EbLR"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-dxgOiQ EbLR"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-dxgOiQ EbLR"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-jlyJG jfAQre"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-gipzik htYqK"
    >
      <a
        aria-current="page"
        className="sc-csuQGl gGRcVa"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-Rmtcm ewaapn"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-cvbbAY eNxvkE"
      >
        <ul
          className="sc-jWBwVP BZrWt"
        >
          <li
            className="sc-brqgnP RaqGA"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-cMljjf lmniap"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-brqgnP RaqGA"
          >
            <a
              aria-haspopup="true"
              className="sc-cMljjf lcWZwU"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-brqgnP RaqGA"
          >
            <a
              aria-haspopup="true"
              className="sc-cMljjf lcWZwU"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-eHgmQL ggoZon"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-hSdWYo cqYJMH"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kAzzGY ixYvFQ"
      >
        <img
          alt=""
          className="sc-chPdSV kfLyyH"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <div
    style={
      Object {
        "background": "linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%)",
        "height": "200vh",
        "width": "100%",
      }
    }
  />,
]
`;

exports[`Storyshots All Components/Headline Level 1 1`] = `
<h1
  className="sc-bRBYWo iugclN"
>
  My example headline
</h1>
`;

exports[`Storyshots All Components/Headline Level 2 1`] = `
<h2
  className="sc-hzDkRC hMHOEw"
>
  My example headline
</h2>
`;

exports[`Storyshots All Components/Headline Level 3 1`] = `
<h3
  className="sc-jhAzac brEDsH"
>
  My example headline
</h3>
`;

exports[`Storyshots All Components/Hero Full Height 1`] = `
<section
  className="sc-fMiknA eYlUjl"
>
  <div
    className="sc-dVhcbM gRCSvZ"
  >
    <h1
      className="sc-bRBYWo iugclN"
    >
      Watch a new film, rediscover your old favourites, and get inspired.
    </h1>
  </div>
</section>
`;

exports[`Storyshots All Components/Hero Normal 1`] = `
<section
  className="sc-fMiknA eZRQPK"
>
  <div
    className="sc-dVhcbM gRCSvZ"
  >
    <h1
      className="sc-bRBYWo iugclN"
    >
      Watch a new film, rediscover your old favourites, and get inspired.
    </h1>
  </div>
</section>
`;

exports[`Storyshots All Components/Hero With Header 1`] = `
Array [
  <div
    className="sc-kgoBCf hJlZUq"
  >
    <div
      className="sc-kGXeez cyTksT"
    >
      <ul
        className="sc-kpOJdX cWODpJ"
      >
        <li
          className="sc-dxgOiQ EbLR"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-dxgOiQ EbLR"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-dxgOiQ EbLR"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-jlyJG eHehst"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-gipzik htYqK"
    >
      <a
        aria-current="page"
        className="sc-csuQGl gGRcVa"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-Rmtcm ewaapn"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-cvbbAY eNxvkE"
      >
        <ul
          className="sc-jWBwVP BZrWt"
        >
          <li
            className="sc-brqgnP RaqGA"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-cMljjf gebQJH"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch & Discover
            </a>
          </li>
          <li
            className="sc-brqgnP RaqGA"
          >
            <a
              aria-haspopup="true"
              className="sc-cMljjf dPhPmR"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Make & Industry
            </a>
          </li>
          <li
            className="sc-brqgnP RaqGA"
          >
            <a
              aria-haspopup="true"
              className="sc-cMljjf dPhPmR"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn & Education
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-eHgmQL ggoZon"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-hSdWYo cqYJMH"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-kAzzGY gozaGK"
      >
        <img
          alt=""
          className="sc-chPdSV kfLyyH"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <section
    className="sc-fMiknA eZRQPK"
  >
    <div
      className="sc-dVhcbM gRCSvZ"
    >
      <h1
        className="sc-bRBYWo iugclN"
      >
        Watch a new film, rediscover your old favourites, and get inspired.
      </h1>
    </div>
  </section>,
]
`;

exports[`Storyshots All Components/Images Normal 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-eqIVtm gRhmhP"
  >
    <div
      className="sc-caSCKo dbHSxF"
    >
      <button
        className="sc-gisBJw fCqnuX"
        onClick={[Function]}
      >
        <img
          alt="Example image"
          className="sc-kjoXOD deiAFJ"
          src="http://placehold.it/300x200"
        />
      </button>
      <button
        className="sc-gisBJw fCqnuX"
        onClick={[Function]}
      >
        <img
          alt="Example image 2"
          className="sc-kjoXOD deiAFJ"
          src="http://placehold.it/200x300"
        />
      </button>
      <button
        className="sc-gisBJw fCqnuX"
        onClick={[Function]}
      >
        <img
          alt="Example image 3"
          className="sc-kjoXOD deiAFJ"
          src="http://placehold.it/600x400"
        />
      </button>
    </div>
    <figcaption
      className="sc-fAjcbJ hbnRDP"
    >
      A gallery of three images
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Images Not Clickable 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-eqIVtm gRhmhP"
  >
    <div
      className="sc-caSCKo dbHSxF"
    >
      <img
        alt="Example image"
        className="sc-kjoXOD iJvosS"
        src="http://placehold.it/300x200"
      />
      <img
        alt="Example image 2"
        className="sc-kjoXOD iJvosS"
        src="http://placehold.it/200x300"
      />
      <img
        alt="Example image 3"
        className="sc-kjoXOD iJvosS"
        src="http://placehold.it/600x400"
      />
    </div>
    <figcaption
      className="sc-fAjcbJ hbnRDP"
    >
      A gallery of three images
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Images Only One 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-eqIVtm gRhmhP"
  >
    <div
      className="sc-caSCKo jWzZWB"
    >
      <button
        className="sc-gisBJw fCqnuX"
        onClick={[Function]}
      >
        <img
          alt="Example image"
          className="sc-kjoXOD deiAFJ"
          src="http://placehold.it/300x200"
        />
      </button>
    </div>
    <figcaption
      className="sc-fAjcbJ hbnRDP"
    >
      A single full-width image
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Lead paragraph Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <article
    className="sc-TOsTZ dsRvib"
  >
    We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
  </article>
</div>
`;

exports[`Storyshots All Components/Page Normal 1`] = `
Array [
  <div
    className="sc-gZMcBi gzQDXt"
  >
    <div
      className="sc-gqjmRU jbLBOJ"
    >
      <ul
        className="sc-VigVT iEDoiP"
      >
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-jTzLTM fRoXoU"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-eHgmQL bilsbt"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-cvbbAY jGssRp"
    >
      <a
        aria-current="page"
        className="sc-jWBwVP jBxXhq"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-brqgnP miVqp"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-ckVGcZ fvxxSu"
      >
        <ul
          className="sc-jKJlTe hkQZuo"
        >
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-hMqMXs cyWvwk"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-eNQAEJ eghrEy"
          >
            <a
              aria-haspopup="true"
              className="sc-hMqMXs bbrXgQ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-dxgOiQ phSZo"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-kpOJdX hgIpcj"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-dnqmqq dQJMcW"
      >
        <img
          alt=""
          className="sc-iwsKbI jKbzIc"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <div
    className="sc-fMiknA gcQXap"
  >
    <article
      className="sc-dVhcbM fvRniO"
    >
      <ol
        className="sc-bxivhb cpkjqV"
      >
        <li
          className="sc-ifAKCX TSOqM"
        >
          <a
            className="sc-EHOje eTLzlg"
            href="/#"
            onClick={[Function]}
          >
            Industry
          </a>
        </li>
        <li
          className="sc-ifAKCX TSOqM"
        >
          <a
            className="sc-EHOje eTLzlg"
            href="/#"
            onClick={[Function]}
          >
            Get funding
          </a>
        </li>
        <li
          className="sc-ifAKCX TSOqM"
        >
          Find a fund to create films, TV or new formats of storytelling
        </li>
      </ol>
      <h1
        className="sc-cMljjf fJTyhF"
      >
        Headline goes here
      </h1>
      <article
        className="sc-fBuWsC clReWJ"
      >
        God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs. Do you have any idea how long it takes those cups to decompose. Yes, Yes, without the oops! Yes, Yes, without the oops! Drive us out of here!
      </article>
      <article
        className="sc-fAjcbJ gXXJnw"
      >
        So you two dig up, dig up dinosaurs? Hey, you know how I'm, like, always trying to save the planet? Here's my chance. Is this my espresso machine? Wh-what is-h-how did you get my espresso machine? Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
      </article>
    </article>
    <aside
      className="sc-eqIVtm jUYugM"
    >
      Sidebar here
    </aside>
  </div>,
  <footer
    className="sc-gzVnrw jtMeGj"
  >
    <img
      alt="British Film Institute"
      className="sc-htoDjs iDzHVx"
      src="test-file-stub"
    />
  </footer>,
]
`;

exports[`Storyshots All Components/PageLinks Eight Links 1`] = `
<ul
  className="sc-dNLxif bUSNJV"
>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Industry fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Get funding fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Get funding fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Find a fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Industry fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Get funding fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Get funding fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Find a fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/PageLinks Four Links 1`] = `
<ul
  className="sc-dNLxif bUSNJV"
>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Industry fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Get funding fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Get funding fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Find a fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/PageLinks Three Links 1`] = `
<ul
  className="sc-dNLxif bUSNJV"
>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Industry fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Get funding fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-frDJqD hKXuKw"
  >
    <h4
      className="sc-fBuWsC cDejFu"
    >
      Get funding fund
    </h4>
    <p
      className="sc-kvZOFW lmVhFx"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-hqyNC kLpwRZ"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-jbKcbu jYASic"
        src="test-file-stub"
      />
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/Text Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <article
    className="sc-hmzhuo fiTANZ"
  >
    

            
    <p>
      We gotta burn the rain forest, 
      <strong>
        dump toxic waste
      </strong>
      , pollute the air, and 
      <a
        href="#"
      >
        rip up the OZONE!
      </a>
       'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
    </p>
    

            
    <ol>
      
                
      <li>
        What do they got in there? King Kong?
      </li>
      
                
      <li>
        You really think you can fly that thing?
      </li>
      
                
      <li>
        Must go faster
      </li>
      
            
    </ol>
    

            
    <p>
      You really think you can fly that thing? Eventually, you do plan to have dinosaurs on your dinosaur tour, right? 
      <a
        href="#"
      >
        I gave it a cold?
      </a>
       I gave it a virus. A computer virus. Did he just throw my cat out of the window? You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
    </p>
    

            
    <ul>
      
                
      <li>
        What do they got in there? King Kong?
      </li>
      
                
      <li>
        You really think you can fly that thing?
      </li>
      
                
      <li>
        Must go faster
      </li>
      
            
    </ul>
    
            
            
  </article>
</div>
`;
